# trustauthority-client-for-c

src/: CMakeLists.txt
src/connector/: CMakeLists.txt
src/token_provider/: CMakeLists.txt
src/token_verifier/: CMakeLists.txt
